fix alignments for contact page

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -518,6 +518,10 @@ ul.why li {
   margin-bottom: 0;
 }
 
+.contact_data_table table {
+  margin-bottom: 0;
+}
+
 .contact_data_table tbody {
   background: none;
   border: none;
